--- a/Reciplease/Reciplease/Supporting files/Base.lproj/LaunchScreen.storyboard
+++ b/Reciplease/Reciplease/Supporting files/Base.lproj/LaunchScreen.storyboard
@@ -18,15 +18,15 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradientBackground" translatesAutoresizingMaskIntoConstraints="NO" id="1qT-au-8qc">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Reciplease" translatesAutoresizingMaskIntoConstraints="NO" id="0gA-sP-xDd">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="0gA-sP-xDd">
                                 <rect key="frame" x="20" y="114" width="374" height="374"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="0gA-sP-xDd" secondAttribute="height" multiplier="1:1" id="9sz-98-xwH"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reciplease" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="svL-xy-NFC">
-                                <rect key="frame" x="20" y="498" width="374" height="45.5"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="36"/>
+                                <rect key="frame" x="20" y="498" width="374" height="36"/>
+                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="36"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -53,7 +53,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Reciplease" width="360" height="360"/>
-        <image name="gradientBackground" width="133.5" height="133.5"/>
+        <image name="gradientBackground" width="66.5" height="200"/>
+        <image name="icon" width="360" height="360"/>
     </resources>
 </document>
